Further code cleanup & fixes in the assembler